"Removed 'animate-on-scroll' class and inline style from 'Our Programs' heading"

--- a/programs.html
+++ b/programs.html
@@ -96,7 +96,7 @@
     <!-- Program Overview Section -->
     <section id="programs" class="py-24 text-center pt-32">
         <div class="container">
-            <h2 class="display-4 font-weight-bold mb-10 animate-on-scroll">Our Programs</h2>
+            <h2 class="display-4 mb-10" style="font-weight:bold">Our Programs</h2>
 
             <!-- Incubation Program -->
             <div class="mb-12">
