creating a main css file and a js for contact map and fixing the contactmap design

--- a/programs.html
+++ b/programs.html
@@ -13,43 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animate.js/1.0.0/animate.min.js"></script>
     <!-- Custom CSS for animations -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
-
-    <style>
-        /* Additional Custom Styling */
-        .nav-link {
-            color: #4a5568;
-        }
-
-        .nav-link:hover {
-            color: #6366f1;
-        }
-
-        .animate-on-scroll {
-            opacity: 0;
-        }
-
-        .animate-in-view {
-            opacity: 1;
-            animation: fadeInUp 1s ease-out;
-        }
-
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(50px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        /* Custom styles for the section background */
-        #programs {
-            background-color: #fff;
-        }
-    </style>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body >
