--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us | I-StartUp</title>
-    <!-- Bootstrap CSS -->
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animate.js/1.0.0/animate.min.js"></script>
-    <!-- Custom CSS for animations -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/contact.css">
 </head>
@@ -149,8 +149,7 @@
         <img src="https://kajabi-storefronts-production.kajabi-cdn.com/kajabi-storefronts-production/themes/2149915285/settings_images/xBlidBVTTGM6bjBgZXgJ_triangle-2.png">
     </section>
 
-<!-- Footer (Reuse from previous pages) -->
-<img src="https://kajabi-storefronts-production.kajabi-cdn.com/kajabi-storefronts-production/themes/2149915285/settings_images/xBlidBVTTGM6bjBgZXgJ_triangle-2.png">
+    <img src="https://kajabi-storefronts-production.kajabi-cdn.com/kajabi-storefronts-production/themes/2149915285/settings_images/xBlidBVTTGM6bjBgZXgJ_triangle-2.png">
     <footer class="bg-gray-900 text-gray-400 py-8" style="margin-top:50px ;">
         <div class="container mx-auto px-6">
             <div class="flex justify-between items-center">
@@ -167,22 +166,9 @@
     <!-- Bootstrap and Animate.js Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animate.js/1.0.0/animate.min.js"></script>
-
-    <!-- Animate on Scroll -->
-    <script>
-        document.addEventListener('scroll', () => {
-            const elements = document.querySelectorAll('.animate-on-scroll');
-            elements.forEach((element) => {
-                const rect = element.getBoundingClientRect();
-                if (rect.top < window.innerHeight && rect.bottom > 0) {
-                    element.classList.add('animate-in-view');
-                }
-            });
-        });
-
-    </script>
-    <script src="scripts/contactmap.js"></script>
-    <!-- Leaflet JS for map functionality -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="scripts/main.js"></script>
+
+    <script src="scripts/contactmap.js"></script>
 </body>
 </html>
