--- a/programs.html
+++ b/programs.html
@@ -5,14 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Program Overview | I-StartUp</title>
-
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animate.js/1.0.0/animate.min.js"></script>
-    <!-- Custom CSS for animations -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="styles/main.css">
 </head>
 
@@ -90,35 +88,22 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-light py-4">
-        <div class="container d-flex justify-content-between">
-            <p>&copy; 2024 I-StartUp. All rights reserved.</p>
-            <div>
-                <a href="#" class="text-light me-3">LinkedIn</a>
-                <a href="#" class="text-light me-3">Twitter</a>
-                <a href="#" class="text-light">Facebook</a>
+    <footer class="bg-gray-900 text-gray-400 py-8">
+        <div class="container mx-auto px-6">
+            <div class="flex justify-between items-center">
+                <p>I-StartUp. <br>© 2024 All rights reserved.</p>
+                <div class="flex space-x-4">
+                    <a href="#" class="hover:text-white">LinkedIn</a>
+                    <a href="#" class="hover:text-white">Twitter</a>
+                    <a href="#" class="hover:text-white">Facebook</a>
+                </div>
             </div>
         </div>
     </footer>
 
-    <!-- Bootstrap and Animate.js Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animate.js/1.0.0/animate.min.js"></script>
-
-    <!-- Animate on Scroll -->
-    <script>
-        document.addEventListener('scroll', () => {
-            const elements = document.querySelectorAll('.animate-on-scroll');
-            elements.forEach((element) => {
-                const rect = element.getBoundingClientRect();
-                if (rect.top < window.innerHeight && rect.bottom > 0) {
-                    element.classList.add('animate-in-view');
-                }
-            });
-        });
-    </script>
+    <script src="scripts/main.js"></script>
 
 </body>
-
 </html>
