--- a/services.html
+++ b/services.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services | I-StartUp</title>
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animate.js/1.0.0/animate.min.js"></script>
-    <!-- Custom CSS for animations -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
+    
     <link rel="stylesheet" href="styles/main.css">
 </head>
 
@@ -119,7 +118,6 @@
         </div>
     </section>
 
-    <!-- Footer (Reuse from previous pages) -->
     <footer class="bg-gray-900 text-gray-400 py-8">
         <div class="container mx-auto px-6">
             <div class="flex justify-between items-center">
@@ -133,22 +131,9 @@
         </div>
     </footer>
 
-
-    <!-- Bootstrap and Animate.js Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animate.js/1.0.0/animate.min.js"></script>
+    <script src="scripts/main.js"></script>
 
-    <!-- Animate on Scroll -->
-    <script>
-        document.addEventListener('scroll', () => {
-            const elements = document.querySelectorAll('.animate-on-scroll');
-            elements.forEach((element) => {
-                const rect = element.getBoundingClientRect();
-                if (rect.top < window.innerHeight && rect.bottom > 0) {
-                    element.classList.add('animate-in-view');
-                }
-            });
-        });
-    </script>
 </body>
 </html>
