"Meta tags for all pages set but need specific description later"
will update soon

--- a/programs.html
+++ b/programs.html
@@ -4,6 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Primary Meta Tags -->
+    <link rel="shortcut icon" href="Assets/logocon-view.png" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="canonical" href="https://www.i-startup.tn/">
+    <meta name="title" content="I-StartUp | Empowering Startups from Idea to Success" />
+    <meta name="description" content="I-StartUp provides dedicated IT support and business mentorship to help startups build MVPs and succeed in global markets." />
+    <meta name="keywords" content="startup, MVP, business mentorship, IT team, Tunisia, entrepreneurs">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.i-startup.tn/" />
+    <meta property="og:title" content="I-StartUp | Empowering Startups from Idea to Success" />
+    <meta property="og:description" content="Providing access to an IT team and expert mentorship to help startups build MVPs and succeed." />
+    <meta property="og:image" content="Assets/meta.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://www.i-startup.tn/" />
+    <meta name="twitter:title" content="I-StartUp | Empowering Startups from Idea to Success" />
+    <meta name="twitter:description" content="I-StartUp helps startups with IT team support, MVP development, and business growth strategies." />
+    <meta name="twitter:image" content="Assets/meta.png" />
+    
     <title>Program Overview | I-StartUp</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -56,37 +80,41 @@
     
 
     <!-- Program Overview Section -->
-    <section id="programs" class="py-24 text-center pt-32">
-        <div class="container">
-            <h2 class="display-4 mb-10" style="font-weight:bold">Our Programs</h2>
+<section id="programs"  class="py-24 bg-white text-center pt-32">
+    <div class="container mx-auto px-6">
+        <h2 class="text-4xl font-bold mb-10 animate__animated animate__fadeInUp">Our Programs</h2>
 
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
             <!-- Incubation Program -->
-            <div class="mb-12">
-                <h3 class="h3 font-weight-semibold mb-4">Incubation Program: IT Team + MVP Development</h3>
-                <p class="lead text-muted mb-8">From idea to prototype – we help startups build a functional MVP with a dedicated IT team.</p>
-                <ul class="list-unstyled text-start text-muted mb-8 p-4">
-                    <li>MVP Development – Description of building a functional prototype.</li>
-                    <li>Business Guidance Experience (BGE) – Entrepreneurs validate ideas and refine models.</li>
-                    <li>Technical Resources – IT team dedicated to building your product.</li>
+            <div class="p-8 bg-white rounded-lg shadow-lg">
+                <h3 class="text-2xl font-semibold mb-6 text-gray-800">Incubation Program: IT Team + MVP Development</h3>
+                <p class="text-lg text-gray-600 mb-6">From idea to prototype – we help startups build a functional MVP with a dedicated IT team.</p>
+                <ul class="list-disc text-left text-gray-600 space-y-3 mb-8 pl-6">
+                    <li>MVP Development – Build a functional prototype.</li>
+                    <li>Business Guidance Experience (BGE) – Validate ideas and refine models.</li>
+                    <li>Technical Resources – Dedicated IT team to build your product.</li>
                     <li>Initial Funding Opportunities – Seed funding options.</li>
                 </ul>
-                <a href="application.html" class="btn btn-primary px-8 py-3 rounded-pill">Apply Now</a>
+                <a href="application.html" class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-blue-700 transition duration-200">Apply Now</a>
             </div>
 
             <!-- Acceleration Program -->
-            <div class="animate-on-scroll mb-16">
-                <h3 class="h3 font-weight-semibold mb-4">Acceleration Program: Scaling Your Business</h3>
-                <p class="lead text-muted mb-8">After MVP, we help startups scale with dedicated support, global market access, and investment preparation.</p>
-                <ul class="list-unstyled text-start text-muted mb-8 p-4">
+            <div class="p-8 bg-white rounded-lg shadow-lg animate__animated animate__fadeInUp">
+                <h3 class="text-2xl font-semibold mb-6 text-gray-800">Acceleration Program: Scaling Your Business</h3>
+                <p class="text-lg text-gray-600 mb-6">After MVP, we help startups scale with dedicated support, global market access, and investment preparation.</p>
+                <ul class="list-disc text-left text-gray-600 space-y-3 mb-8 pl-6">
                     <li>Growth Strategies – Scale with dedicated IT support.</li>
                     <li>Global Market Access – Reach international markets.</li>
                     <li>Investment Readiness – Preparing your business for growth.</li>
                     <li>Demo Day – Present to investors and partners.</li>
                 </ul>
-                <a href="application.html" class="btn btn-primary px-8 py-3 rounded-pill">Join the Acceleration Program</a>
+                <a href="application.html" class="inline-block bg-green-600 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-green-700 transition duration-200">Join the Acceleration Program</a>
             </div>
+
         </div>
-    </section>
+    </div>
+</section>
+
 
     <footer class="bg-gray-900 text-gray-400 py-8">
         <div class="container mx-auto px-6">
