--- a/programs.html
+++ b/programs.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- Primary Meta Tags -->
-    <link rel="shortcut icon" href="Assets/logocon-view.png" type="image/x-icon">
+    <!-- Primary Meta Tags -->
+    <link rel="shortcut icon" href="Assets/logocon-full.png" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -27,7 +26,7 @@
     <meta name="twitter:title" content="I-StartUp | Empowering Startups from Idea to Success" />
     <meta name="twitter:description" content="I-StartUp helps startups with IT team support, MVP development, and business growth strategies." />
     <meta name="twitter:image" content="Assets/meta.png" />
-    
+
     <title>Program Overview | I-StartUp</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
