--- a/programs.html
+++ b/programs.html
@@ -94,6 +94,9 @@
                     <li>Technical Resources – Dedicated IT team to build your product.</li>
                     <li>Initial Funding Opportunities – Seed funding options.</li>
                 </ul>
+                <center>
+                    <img src="https://startuptn.in/images/fill-application.png" class="px-6 py-3" alt="">
+                </center>
                 <a href="application.html" class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-blue-700 transition duration-200">Apply Now</a>
             </div>
 
@@ -107,6 +110,9 @@
                     <li>Investment Readiness – Preparing your business for growth.</li>
                     <li>Demo Day – Present to investors and partners.</li>
                 </ul>
+                <center>
+                    <img src="https://startuptn.in/images/racket-img.png" class="px-6 py-3" alt="">
+                </center>
                 <a href="application.html" class="inline-block bg-green-600 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-green-700 transition duration-200">Join the Acceleration Program</a>
             </div>
 
