--- a/application.html
+++ b/application.html
@@ -42,7 +42,7 @@
     <header class="w-full py-4 bg-white shadow-md fixed top-0 z-10">
         <nav class="navbar navbar-expand-lg navbar-light container mx-auto flex justify-between items-center px-6">
             <!-- Brand Logo -->
-            <a class="text-2xl font-bold text-indigo-600 navbar-brand animate__animated animate__fadeInDown" href="index.html">I-StartUp</a>
+            <a class="text-2xl font-bold text-indigo-600 navbar-brand animate__animated animate__fadeInDown" href="index.html"><img src="Assets/logoname.png" width="150px" alt=""></a>
             
             <!-- Hamburger Menu Button for Mobile -->
             <button class="navbar-toggler nav-toggle text-gray-700 lg:hidden" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
