"Added styles for hero section and programs section, updated HTML structure for programs section, and made minor adjustments to services.html"

--- a/index.html
+++ b/index.html
@@ -77,15 +77,28 @@
             </div>
         </nav>
     </header>
-    
+
+<style>
+    #home{
+        background-image: url('https://media.discordapp.net/attachments/1115393182998466713/1282777853498359859/vOx9uKF.png?ex=66e68639&is=66e534b9&hm=9f9726668f0fbf536ba4fdc0e61ffb56cb29874756309519758ab0135aa2d3eb&=&format=webp&quality=lossless&width=1248&height=702');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-blend-mode: color-burn;
+    }
+    #home a:hover{
+        scale: 1.1 ;
+    }
+</style>
+
+
 
     <!-- Hero Section -->
     <section id="home" class="bg-indigo-600 text-white h-screen flex flex-col justify-center items-center text-center pt-24 animate__animated animate__fadeIn">
         <h1 class="text-5xl font-bold mb-4">Empowering Startups from Idea to Success</h1>
         <p class="text-lg mb-8">Access expert IT teams and business guidance to develop your MVP and scale your business.</p>
         <div class="flex flex-col sm:flex-row sm:space-x-4">
-            <a href="programs.html" class="bg-white text-indigo-600 px-6 py-3 rounded-md text-lg font-semibold hover:bg-indigo-100" style="margin-top: 10px;"> Join Our Incubation Program </a>
-            <a href="programs.html" class="bg-transparent border-2 border-white text-white px-6 py-3 rounded-md text-lg font-semibold hover:bg-white hover:text-indigo-600" style="margin-top: 10px;">Apply for Acceleration</a>
+            <a href="programs.html" class="bg-white text-indigo-600 px-6 py-3 rounded-md text-lg font-semibold" style="margin-top: 10px;"> Join Our Incubation Program </a>
+            <a href="programs.html" class="bg-transparent border-2 border-white text-white px-6 py-3 rounded-md text-lg font-semibold" style="margin-top: 10px;">Apply for Acceleration</a>
         </div>
         
     </section>
