--- a/programs.html
+++ b/programs.html
@@ -76,49 +76,56 @@
             </div>
         </nav>
     </header>
-    
+
+<style>
+    #programs{
+        background-image: url('https://img.freepik.com/free-vector/abstract-light-shapes-geometric-background-business-advertising_1017-42845.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+</style>
 
     <!-- Program Overview Section -->
-<section id="programs"  class="py-24 bg-white text-center pt-32">
-    <div class="container mx-auto px-6">
-        <h2 class="text-4xl font-bold mb-10 animate__animated animate__fadeInUp">Our Programs</h2>
+    <section id="programs"  class="py-24 bg-white text-center pt-32">
+        <div class="container mx-auto px-6">
+            <h2 class="text-4xl font-bold mb-10 animate__animated animate__fadeInUp">Our Programs</h2>
 
-        <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
-            <!-- Incubation Program -->
-            <div class="p-8 bg-white rounded-lg shadow-lg">
-                <h3 class="text-2xl font-semibold mb-6 text-gray-800">Incubation Program: IT Team + MVP Development</h3>
-                <p class="text-lg text-gray-600 mb-6">From idea to prototype – we help startups build a functional MVP with a dedicated IT team.</p>
-                <ul class="list-disc text-left text-gray-600 space-y-3 mb-8 pl-6">
-                    <li>MVP Development – Build a functional prototype.</li>
-                    <li>Business Guidance Experience (BGE) – Validate ideas and refine models.</li>
-                    <li>Technical Resources – Dedicated IT team to build your product.</li>
-                    <li>Initial Funding Opportunities – Seed funding options.</li>
-                </ul>
-                <center>
-                    <img src="https://startuptn.in/images/fill-application.png" class="px-6 py-3" alt="">
-                </center>
-                <a href="application.html" class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-blue-700 transition duration-200">Apply Now</a>
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
+                <!-- Incubation Program -->
+                <div class="p-8 bg-white rounded-lg shadow-lg">
+                    <h3 class="text-2xl font-semibold mb-6 text-gray-800">Incubation Program: IT Team + MVP Development</h3>
+                    <p class="text-lg text-gray-600 mb-6">From idea to prototype – we help startups build a functional MVP with a dedicated IT team.</p>
+                    <ul class="list-disc text-left text-gray-600 space-y-3 mb-8 pl-6">
+                        <li>MVP Development – Build a functional prototype.</li>
+                        <li>Business Guidance Experience (BGE) – Validate ideas and refine models.</li>
+                        <li>Technical Resources – Dedicated IT team to build your product.</li>
+                        <li>Initial Funding Opportunities – Seed funding options.</li>
+                    </ul>
+                    <center>
+                        <img src="https://startuptn.in/images/fill-application.png" class="px-6 py-3" alt="">
+                    </center>
+                    <a href="application.html" class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-blue-700 transition duration-200">Apply Now</a>
+                </div>
+
+                <!-- Acceleration Program -->
+                <div class="p-8 bg-white rounded-lg shadow-lg animate__animated animate__fadeInUp">
+                    <h3 class="text-2xl font-semibold mb-6 text-gray-800">Acceleration Program: Scaling Your Business</h3>
+                    <p class="text-lg text-gray-600 mb-6">After MVP, we help startups scale with dedicated support, global market access, and investment preparation.</p>
+                    <ul class="list-disc text-left text-gray-600 space-y-3 mb-8 pl-6">
+                        <li>Growth Strategies – Scale with dedicated IT support.</li>
+                        <li>Global Market Access – Reach international markets.</li>
+                        <li>Investment Readiness – Preparing your business for growth.</li>
+                        <li>Demo Day – Present to investors and partners.</li>
+                    </ul>
+                    <center>
+                        <img src="https://startuptn.in/images/racket-img.png" class="px-6 py-3" alt="">
+                    </center>
+                    <a href="application.html" class="inline-block bg-green-600 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-green-700 transition duration-200">Join the Acceleration Program</a>
+                </div>
+
             </div>
-
-            <!-- Acceleration Program -->
-            <div class="p-8 bg-white rounded-lg shadow-lg animate__animated animate__fadeInUp">
-                <h3 class="text-2xl font-semibold mb-6 text-gray-800">Acceleration Program: Scaling Your Business</h3>
-                <p class="text-lg text-gray-600 mb-6">After MVP, we help startups scale with dedicated support, global market access, and investment preparation.</p>
-                <ul class="list-disc text-left text-gray-600 space-y-3 mb-8 pl-6">
-                    <li>Growth Strategies – Scale with dedicated IT support.</li>
-                    <li>Global Market Access – Reach international markets.</li>
-                    <li>Investment Readiness – Preparing your business for growth.</li>
-                    <li>Demo Day – Present to investors and partners.</li>
-                </ul>
-                <center>
-                    <img src="https://startuptn.in/images/racket-img.png" class="px-6 py-3" alt="">
-                </center>
-                <a href="application.html" class="inline-block bg-green-600 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-green-700 transition duration-200">Join the Acceleration Program</a>
-            </div>
-
         </div>
-    </div>
-</section>
+    </section>
 
 
     <footer class="bg-gray-900 text-gray-400 py-8">
