"Removed IP and time extraction in contactmap.js, added a comment, and reformatted a button in success-stories.html"

--- a/success-stories.html
+++ b/success-stories.html
@@ -109,9 +109,7 @@
             </div>
 
             <!-- CTA Button -->
-            <a href="application.html" class="mt-12 inline-block bg-indigo-600 text-white px-8 py-3 rounded-md text-lg font-semibold hover:bg-indigo-700 animate__animated animate__fadeInUp animate__delay-2s">
-                Join Us
-            </a>
+            <a href="application.html" class="mt-12 inline-block bg-indigo-600 text-white px-8 py-3 rounded-md text-lg font-semibold hover:bg-indigo-700 animate__animated animate__fadeInUp animate__delay-2s">Join Us</a>
         </div>
     </section>
 
