"Removed trailing whitespace from meta tags and added a line break and horizontal rule to services.html"

--- a/contact.html
+++ b/contact.html
@@ -152,7 +152,7 @@
 
     <div class="bg-gray-100 p-6 mb-12">
         <center>
-            <h3 class="max-w-lg p-6 ">Feel free to email us for a 1to1 conversation we mean to initialize contact with our customers to gain trust</h3>
+            <h3 class="max-w-lg p-6 ">Feel free to email us for a 1 on 1 conversation we mean to initialize contact with our customers to gain trust</h3>
         </center>
     </div>
 
