--- a/programs.html
+++ b/programs.html
@@ -127,11 +127,10 @@
         </div>
     </section>
 
-
     <footer class="bg-gray-900 text-gray-400 py-8">
         <div class="container mx-auto px-6">
             <div class="flex justify-between items-center">
-                <p>I-StartUp. <br>© 2024 All rights reserved.</p>
+                <p>© 2024 I-StartUp. All rights reserved.</p>
                 <div class="flex space-x-4">
                     <a href="#" class="hover:text-white">LinkedIn</a>
                     <a href="#" class="hover:text-white">Twitter</a>
