--- a/services.html
+++ b/services.html
@@ -88,7 +88,7 @@
                 <div class="flex items-center animate__animated animate__fadeInUp" >
                     <!-- Image for Service 1 -->
                     <div class="w-1/3">
-                        <img src="https://placehold.co/300x500?text=sorry" alt="https://placehold.co/300x500" class="rounded-lg shadow-lg w-full">
+                        <img src="Assets/IT Team Support.png" alt="https://placehold.co/300x500" class="rounded-lg shadow-lg w-full">
                     </div>
                     <!-- Text for Service 1 -->
                     <div class="w-2/3 pl-6">
@@ -101,7 +101,7 @@
                 <div class="flex items-center animate-on-scroll">
                     <!-- Image for Service 2 -->
                     <div class="w-1/3">
-                        <img src="https://placehold.co/300x500" alt="MVP Development" class="rounded-lg shadow-lg w-full">
+                        <img src="Assets/MVP Development.png" alt="MVP Development" class="rounded-lg shadow-lg w-full">
                     </div>
                     <!-- Text for Service 2 -->
                     <div class="w-2/3 pl-6">
@@ -114,7 +114,7 @@
                 <div class="flex items-center animate-on-scroll  animate__delay-1s">
                     <!-- Image for Service 3 -->
                     <div class="w-1/3">
-                        <img src="https://placehold.co/300x500" alt="Business Guidance" class="rounded-lg shadow-lg w-full">
+                        <img src="Assets/Business Guidance Experience (BGE).png" alt="Business Guidance" class="rounded-lg shadow-lg w-full">
                     </div>
                     <!-- Text for Service 3 -->
                     <div class="w-2/3 pl-6">
@@ -127,7 +127,7 @@
                 <div class="flex items-center animate-on-scroll animate__delay-1s">
                     <!-- Image for Service 4 -->
                     <div class="w-1/3">
-                        <img src="https://placehold.co/300x500" alt="Mentorship and Coaching" class="rounded-lg shadow-lg w-full">
+                        <img src="Assets/Mentorship and Coaching.png" alt="Mentorship and Coaching" class="rounded-lg shadow-lg w-full">
                     </div>
                     <!-- Text for Service 4 -->
                     <div class="w-2/3 pl-6">
@@ -140,7 +140,7 @@
                 <div class="flex items-center animate-on-scroll animate__delay-1s">
                     <!-- Image for Service 5 -->
                     <div class="w-1/3">
-                        <img src="https://placehold.co/300x500" alt="Networking and Collaboration" class="rounded-lg shadow-lg w-full">
+                        <img src="Assets/Networking and Collaboration.png" alt="Networking and Collaboration" class="rounded-lg shadow-lg w-full">
                     </div>
                     <!-- Text for Service 5 -->
                     <div class="w-2/3 pl-6">
@@ -153,7 +153,7 @@
                 <div class="flex items-center animate-on-scroll animate__delay-1s">
                     <!-- Image for Service 6 -->
                     <div class="w-1/3">
-                        <img src="https://placehold.co/300x500" alt="Web Development" class="rounded-lg shadow-lg w-full">
+                        <img src="Assets/Web Development Services.png" alt="Web Development" class="rounded-lg shadow-lg w-full">
                     </div>
                     <!-- Text for Service 6 -->
                     <div class="w-2/3 pl-6">
@@ -166,7 +166,7 @@
                 <div class="flex items-center animate-on-scroll animate__delay-1s">
                     <!-- Image for Service 7 -->
                     <div class="w-1/3">
-                        <img src="https://placehold.co/300x500" alt="Software Management" class="rounded-lg shadow-lg w-full">
+                        <img src="Assets/Software Management Services.png" alt="Software Management" class="rounded-lg shadow-lg w-full">
                     </div>
                     <!-- Text for Service 7 -->
                     <div class="w-2/3 pl-6">
@@ -179,7 +179,7 @@
                 <div class="flex items-center animate-on-scroll animate__delay-1s">
                     <!-- Image for Service 8 -->
                     <div class="w-1/3">
-                        <img src="https://placehold.co/300x500" alt="Business Scaling & Growth" class="rounded-lg shadow-lg w-full">
+                        <img src="Assets/Business Scaling & Growth Strategies.png" alt="Business Scaling & Growth" class="rounded-lg shadow-lg w-full">
                     </div>
                     <!-- Text for Service 8 -->
                     <div class="w-2/3 pl-6">
