--- a/services.html
+++ b/services.html
@@ -8,14 +8,14 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="canonical" href="https://www.i-startup.tn/">
+    <link rel="canonical" href="https://www.i-startup.tn/services.html">
     <meta name="title" content="I-StartUp | Empowering Startups from Idea to Success" />
     <meta name="description" content="I-StartUp provides dedicated IT support and business mentorship to help startups build MVPs and succeed in global markets." />
     <meta name="keywords" content="startup, MVP, business mentorship, IT team, Tunisia, entrepreneurs">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.i-startup.tn/" />
+    <meta property="og:url" content="https://www.i-startup.tn/services.html" />
     <meta property="og:title" content="I-StartUp | Empowering Startups from Idea to Success" />
     <meta property="og:description" content="Providing access to an IT team and expert mentorship to help startups build MVPs and succeed." />
     <meta property="og:image" content="Assets/meta.png" />
