"Updated background image URL for #home element in index.html"

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <style>
     #home{
-        background-image: url('https://media.discordapp.net/attachments/1115393182998466713/1282777853498359859/vOx9uKF.png?ex=66e68639&is=66e534b9&hm=9f9726668f0fbf536ba4fdc0e61ffb56cb29874756309519758ab0135aa2d3eb&=&format=webp&quality=lossless&width=1248&height=702');
+        background-image: url(Assets/index.png);
         background-repeat: no-repeat;
         background-size: cover;
         background-blend-mode: color-burn;
