"Updated CTA button link in application.html and added 'disabled' attribute to Send button in contact.html"

--- a/application.html
+++ b/application.html
@@ -139,7 +139,7 @@
                 </figure>
             </div>
             <!-- CTA Button -->
-            <a href="application-form.html" class="mt-12 inline-block bg-indigo-600 text-white px-8 py-3 rounded-md text-lg font-semibold hover:bg-indigo-700 animate__animated animate__fadeInUp animate__delay-1s">
+            <a href="404.html" class="mt-12 inline-block bg-indigo-600 text-white px-8 py-3 rounded-md text-lg font-semibold hover:bg-indigo-700 animate__animated animate__fadeInUp animate__delay-1s">
                 Apply Now
             </a>
         </div>
