--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
                                 <input type="text" class="w-full h-12 text-blue-600 placeholder-blue-400  shadow-sm bg-transparent text-lg font-normal leading-7 rounded-full border border-blue-200 focus:outline-none pl-4 mb-10" placeholder="Contact Number " name="name">
                                 <input type="text" class="w-full h-12 text-blue-600 placeholder-blue-400 shadow-sm bg-transparent text-lg font-normal leading-7 rounded-lg border border-blue-200 focus:outline-none pl-4 mb-10" placeholder="Email " name="email">
                                 <textarea type="text" class="w-full h-12 text-blue-600 placeholder-blue-400 bg-transparent text-lg shadow-sm font-normal leading-7 rounded-lg border border-blue-200 focus:outline-none pl-4 mb-10" placeholder="Message" name="message" cols="16" rows="10"></textarea>
-                                <button type="submit" class="w-full h-12 text-white bg-blue-500 font-semibold leading-6 rounded-lg transition-all duration-700 hover:bg-blue-700 shadow-sm">Send</button>
+                                <button type="submit" class="w-full h-12 text-white bg-blue-500 font-semibold leading-6 rounded-lg transition-all duration-700 hover:bg-blue-700 shadow-sm" disabled>Send</button>
                             </div>
                         </div>
                 </section>
