--- a/programs.html
+++ b/programs.html
@@ -97,7 +97,7 @@
                     <p class="text-lg text-gray-600 mb-6">From idea to prototype – we help startups build a functional MVP with a dedicated IT team.</p>
                     <ul class="list-disc text-left text-gray-600 space-y-3 mb-8 pl-6">
                         <li>MVP Development – Build a functional prototype.</li>
-                        <li>Business Guidance Experience (BGE) – Validate ideas and refine models.</li>
+                        <li>Busi)ness Guidance Experience (BGE) – Validate ideas and refine models.</li>
                         <li>Technical Resources – Dedicated IT team to build your product.</li>
                         <li>Initial Funding Opportunities – Seed funding options.</li>
                     </ul>
