--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
                 Have questions? Let’s talk!
             </p>
 
-            <form id="contact-form" method="post" class="animate__animated animate__fadeInUp app-form" name="contact-form">
+            <form name="contact-form" method="post" id="contact-form" class="contact-form animate__animated animate__fadeInUp">
 
                 <section class="py-24">
                     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
@@ -96,17 +96,12 @@
                                 <div class="group w-full h-full">
                                     <div class="relative h-full">
                                         <img src="https://pagedone.io/asset/uploads/1696488602.png" alt="ContactUs tailwind section" class="w-full h-full lg:rounded-l-2xl rounded-2xl bg-blend-multiply bg-indigo-700" />
-                                        <h1
-                                            class="font-manrope fade-in-up text-white text-4xl font-bold leading-10 absolute top-11 left-11 fade-in-up">
-                                            Contact us</h1>
+                                        <h1 class="font-manrope fade-in-up text-white text-4xl font-bold leading-10 absolute top-11 left-11 fade-in-up"> Contact us</h1>
                                         <div class="absolute bottom-0 w-full lg:p-11 p-5">
                                             <div class="bg-white rounded-lg p-6 block">
                                                 <a class="flex items-center mb-6">
                                                     <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <path
-                                                            d="M22.3092 18.3098C22.0157 18.198 21.8689 18.1421 21.7145 18.1287C21.56 18.1154 21.4058 18.1453 21.0975 18.205L17.8126 18.8416C17.4392 18.9139 17.2525 18.9501 17.0616 18.9206C16.8707 18.891 16.7141 18.8058 16.4008 18.6353C13.8644 17.2551 12.1853 15.6617 11.1192 13.3695C10.9964 13.1055 10.935 12.9735 10.9133 12.8017C10.8917 12.6298 10.9218 12.4684 10.982 12.1456L11.6196 8.72559C11.6759 8.42342 11.7041 8.27233 11.6908 8.12115C11.6775 7.96998 11.6234 7.82612 11.5153 7.5384L10.6314 5.18758C10.37 4.49217 10.2392 4.14447 9.95437 3.94723C9.6695 3.75 9.29804 3.75 8.5551 3.75H5.85778C4.58478 3.75 3.58264 4.8018 3.77336 6.06012C4.24735 9.20085 5.64674 14.8966 9.73544 18.9853C14.0295 23.2794 20.2151 25.1426 23.6187 25.884C24.9335 26.1696 26.0993 25.1448 26.0993 23.7985V21.2824C26.0993 20.5428 26.0993 20.173 25.9034 19.8888C25.7076 19.6046 25.362 19.4729 24.6708 19.2096L22.3092 18.3098Z"
-                                                            stroke="blue" stroke-width="2" stroke-linecap="round"
-                                                            stroke-linejoin="round" />
+                                                        <path d="M22.3092 18.3098C22.0157 18.198 21.8689 18.1421 21.7145 18.1287C21.56 18.1154 21.4058 18.1453 21.0975 18.205L17.8126 18.8416C17.4392 18.9139 17.2525 18.9501 17.0616 18.9206C16.8707 18.891 16.7141 18.8058 16.4008 18.6353C13.8644 17.2551 12.1853 15.6617 11.1192 13.3695C10.9964 13.1055 10.935 12.9735 10.9133 12.8017C10.8917 12.6298 10.9218 12.4684 10.982 12.1456L11.6196 8.72559C11.6759 8.42342 11.7041 8.27233 11.6908 8.12115C11.6775 7.96998 11.6234 7.82612 11.5153 7.5384L10.6314 5.18758C10.37 4.49217 10.2392 4.14447 9.95437 3.94723C9.6695 3.75 9.29804 3.75 8.5551 3.75H5.85778C4.58478 3.75 3.58264 4.8018 3.77336 6.06012C4.24735 9.20085 5.64674 14.8966 9.73544 18.9853C14.0295 23.2794 20.2151 25.1426 23.6187 25.884C24.9335 26.1696 26.0993 25.1448 26.0993 23.7985V21.2824C26.0993 20.5428 26.0993 20.173 25.9034 19.8888C25.7076 19.6046 25.362 19.4729 24.6708 19.2096L22.3092 18.3098Z" stroke="blue" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                                                     </svg>
                                                     <h5 class="text-black text-base font-normal leading-6 ml-5">+216 xx-xx-xx-xx</h5>
                                                 </a>
@@ -142,9 +137,10 @@
                                 <input type="tel" class="w-full h-12 text-blue-600 placeholder-blue-400  shadow-sm bg-transparent text-lg font-normal leading-7 rounded-full border border-blue-200 focus:outline-none pl-4 mb-10" placeholder="Contact Number " name="number">
                                 <input type="email" class="w-full h-12 text-blue-600 placeholder-blue-400 shadow-sm bg-transparent text-lg font-normal leading-7 rounded-lg border border-blue-200 focus:outline-none pl-4 mb-10" placeholder="Email " name="email">
                                 <textarea type="text" class="w-full h-12 text-blue-600 placeholder-blue-400 bg-transparent text-lg shadow-sm font-normal leading-7 rounded-lg border border-blue-200 focus:outline-none pl-4 mb-10" placeholder="Message" name="message" cols="16" rows="10"></textarea>
-                                <button type="submit" class="w-full h-12 text-white bg-blue-500 font-semibold leading-6 rounded-lg transition-all duration-700 hover:bg-blue-700 shadow-sm" disabled>Send</button>
+                                <button type="submit" id="send" class="w-full h-12 text-white bg-blue-500 font-semibold leading-6 rounded-lg transition-all duration-700 hover:bg-blue-700 shadow-sm">Send</button>
                             </div>
                         </div>
+                    </div>
                 </section>
             </form>
         </div>
@@ -189,7 +185,11 @@
     <script src="scripts/main.js"></script>
 
     <script src="scripts/contactmap.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="scripts/msgcontact.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </body>
 </html>
