--- a/404.html
+++ b/404.html
@@ -75,9 +75,15 @@
   <script>
     // JavaScript to redirect back to homepage
     function goHome() {
-      window.location.href = 'https://wwww.i-startup.tn'; // Adjust this to your homepage URL
+      Swal.fire({
+        icon: 'error',
+        title: 'We are Not hiring right now',
+        text: 'We appreciate your gesture although we have no empty positions. You can surely contact us.'
+      }).then(() => {
+        window.location.href = '/index.html'; // Adjust this to your homepage URL
+      });
     }
   </script>
-
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </body>
 </html>
