"Updated footer section in multiple HTML files to include logo, social links, emails, and copyright text with responsive design"

--- a/404.html
+++ b/404.html
@@ -68,7 +68,7 @@
     <p class="text-gray-500 text-sm mt-4">Or, try the Konami Code if you’re feeling adventurous. 😉</p>
     <!-- Background Vectors -->
     <div class="absolute top-0 left-0 w-40 h-40 bg-indigo-600 rounded-full opacity-20 rotate-animation"></div>
-    <div class="absolute bottom-0 right-0 w-40 h-40 bg-gray-600 rounded-full opacity-20 rotate-animation"></div>
+    <div class="absolute bottom-0 right-0 w-50 h-50 rounded-full"><img src="https://2392094.fs1.hubspotusercontent-na1.net/hub/2392094/hubfs/talent_profile.png?width=150&height=150&name=talent_profile.png" alt=""></div>
     
   </div>
 
