--- a/success-stories.html
+++ b/success-stories.html
@@ -89,12 +89,12 @@
             <!-- Success Story 1 -->
             <div class="bg-gray-100 p-6 mb-12 rounded-lg shadow-md animate__animated animate__fadeInUp">
                 <div class="flex items-center justify-between mb-6">
-                    <h3 class="text-2xl font-semibold text-indigo-600">Startup 1</h3>
-                    <img src="startup1-logo.png" alt="Startup 1 Logo" class="h-12 w-12 rounded-full">
+                    <h3 class="text-2xl font-semibold text-indigo-600">LingoLand</h3>
+                    <img src="https://lingo-land.net/1.png" alt="lingologo" class="h-12 w-12 rounded-full">
                 </div>
                 <p class="text-lg text-gray-600 mb-4"><strong>Challenge:</strong> Lack of technical team.</p>
                 <p class="text-lg text-gray-600 mb-4"><strong>Solution:</strong> IT support and MVP development.</p>
-                <p class="text-lg text-gray-600 mb-4"><strong>Outcome:</strong> Secured funding and scaled globally.</p>
+                <p class="text-lg text-gray-600 mb-4"><strong>Outcome:</strong> Securing an online product and distribution.</p>
             </div>
 
             <!-- Success Story 2 -->
