"Updated solution and outcome descriptions for Lingo success story"

--- a/success-stories.html
+++ b/success-stories.html
@@ -93,8 +93,8 @@
                     <img src="https://lingo-land.net/1.png" alt="lingologo" class="h-12 w-12 rounded-full">
                 </div>
                 <p class="text-lg text-gray-600 mb-4"><strong>Challenge:</strong> Lack of technical team.</p>
-                <p class="text-lg text-gray-600 mb-4"><strong>Solution:</strong> IT support and MVP development.</p>
-                <p class="text-lg text-gray-600 mb-4"><strong>Outcome:</strong> Securing an online product and distribution.</p>
+                <p class="text-lg text-gray-600 mb-4"><strong>Solution:</strong> IT support and personal team.</p>
+                <p class="text-lg text-gray-600 mb-4"><strong>Outcome:</strong> Securing an online presence and distribution.</p>
             </div>
 
             <!-- Success Story 2 -->
