--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <meta property="og:site_name" content="Make it Rock !" />
     <meta property="og:title" content="I-StartUp | Empowering Startups from Idea to Success" />
     <meta property="og:description" content="Providing access to an IT team and expert mentorship to help startups build MVPs and succeed." />
-    <meta property="og:image" content="Assets/meta.png" />
+    <meta property="og:image" content="https://www.i-startup.tn/Assets/meta.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://www.i-startup.tn/" />
     <meta name="twitter:title" content="I-StartUp | Empowering Startups from Idea to Success" />
     <meta name="twitter:description" content="I-StartUp helps startups with IT team support, MVP development, and business growth strategies." />
-    <meta name="twitter:image" content="Assets/meta.png" />
+    <meta name="twitter:image" content="https://www.i-startup.tn/Assets/meta.png" />
 
     <title>I-StartUp | Empowering Startups from Idea to Success</title>
 
