--- a/application.html
+++ b/application.html
@@ -9,22 +9,22 @@
     <link rel="icon" type="image/png" sizes="32x32" href="Assets/logocon-full.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Assets/logocon-full.png">
     <link rel="canonical" href="https://www.i-startup.tn/">
-    <meta name="title" content="I-StartUp | Empowering Startups from Idea to Success" />
-    <meta name="description" content="I-StartUp provides dedicated IT support and business mentorship to help startups build MVPs and succeed in global markets." />
+    <meta name="title" content="I-StartUp | Application Process" />
+    <meta name="description" content="We're excited that you're interested in working with I-StartUp to take your startup to the next level. Please fill out the application form below to get started." />
     <meta name="keywords" content="startup, MVP, business mentorship, IT team, Tunisia, entrepreneurs">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.i-startup.tn/" />
-    <meta property="og:title" content="I-StartUp | Empowering Startups from Idea to Success" />
-    <meta property="og:description" content="Providing access to an IT team and expert mentorship to help startups build MVPs and succeed." />
+    <meta property="og:title" content="I-StartUp |Application Process" />
+    <meta property="og:description" content="We're excited that you're interested in working with I-StartUp to take your startup to the next level. Please fill out the application form below to get started." />
     <meta property="og:image" content="Assets/meta.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://www.i-startup.tn/" />
-    <meta name="twitter:title" content="I-StartUp | Empowering Startups from Idea to Success" />
-    <meta name="twitter:description" content="I-StartUp helps startups with IT team support, MVP development, and business growth strategies." />
+    <meta name="twitter:title" content="I-StartUp | Application Process" />
+    <meta name="twitter:description" content="We're excited that you're interested in working with I-StartUp to take your startup to the next level. Please fill out the application form below to get started." />
     <meta name="twitter:image" content="Assets/meta.png" />
     <title>Application | I-StartUp</title>
 
