--- a/contact.html
+++ b/contact.html
@@ -9,23 +9,23 @@
     <link rel="icon" type="image/png" sizes="32x32" href="Assets/logocon-full.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Assets/logocon-full.png">
     <link rel="canonical" href="https://www.i-startup.tn/">
-    <meta name="title" content="I-StartUp | Empowering Startups from Idea to Success" />
-    <meta name="description" content="I-StartUp provides dedicated IT support and business mentorship to help startups build MVPs and succeed in global markets." />
+    <meta name="title" content="I-StartUp | Contact us 😉" />
+    <meta name="description" content="If you have any questions, feedback, or would like to learn more about our dedicated IT support and business mentorship services, please don't hesitate to contact us. We'd love to hear from you and explore how we can help your startup thrive." />
     <meta name="keywords" content="startup, MVP, business mentorship, IT team, Tunisia, entrepreneurs">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.i-startup.tn/" />
-    <meta property="og:title" content="I-StartUp | Empowering Startups from Idea to Success" />
-    <meta property="og:description" content="Providing access to an IT team and expert mentorship to help startups build MVPs and succeed." />
-    <meta property="og:image" content="Assets/meta.png" />
+    <meta property="og:title" content="I-StartUp | Contact us 😉" />
+    <meta property="og:description" content="If you have any questions, feedback, or would like to learn more about our dedicated IT support and business mentorship services, please don't hesitate to contact us. We'd love to hear from you and explore how we can help your startup thrive." />
+    <meta property="og:image" content="https://www.i-startup.tn/Assets/meta.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://www.i-startup.tn/" />
-    <meta name="twitter:title" content="I-StartUp | Empowering Startups from Idea to Success" />
-    <meta name="twitter:description" content="I-StartUp helps startups with IT team support, MVP development, and business growth strategies." />
-    <meta name="twitter:image" content="Assets/meta.png" />
+    <meta name="twitter:title" content="I-StartUp | Contact us 😉" />
+    <meta name="twitter:description" content="If you have any questions, feedback, or would like to learn more about our dedicated IT support and business mentorship services, please don't hesitate to contact us. We'd love to hear from you and explore how we can help your startup thrive." />
+    <meta name="twitter:image" content="https://www.i-startup.tn/Assets/meta.png" />
     <title>Contact Us | I-StartUp</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
