--- a/jobform.html
+++ b/jobform.html
@@ -162,7 +162,7 @@
     </form>
     </div>
 
-    <div class="max-w-2xl mx-auto p-6 bg-white shadow-md rounded-lg mt-10">
+    <!-- <div class="max-w-2xl mx-auto p-6 bg-white shadow-md rounded-lg mt-10">
         <h2 class="text-4xl font-bold mb-6 text-center">Startup Application</h2>
         <p class="text-gray-600 mb-4 text-center">Please complete the form below to apply for our programs.</p>
         <form method="post" id="startup-application">
@@ -235,7 +235,7 @@
 
             <button type="submit" class="bg-blue-600 text-white hover:bg-blue-700 p-2 rounded w-full">Submit Application</button>
         </form>
-    </div>
+    </div> -->
 
     <footer class="bg-gray-900 text-gray-400 py-8">
         <div class="container mx-auto px-6">
