--- a/success-stories.html
+++ b/success-stories.html
@@ -9,22 +9,22 @@
     <link rel="icon" type="image/png" sizes="32x32" href="Assets/logocon-full.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Assets/logocon-full.png">
     <link rel="canonical" href="https://www.i-startup.tn/">
-    <meta name="title" content="I-StartUp | Empowering Startups from Idea to Success" />
-    <meta name="description" content="I-StartUp provides dedicated IT support and business mentorship to help startups build MVPs and succeed in global markets." />
+    <meta name="title" content="I-StartUp | From Idea to Success" />
+    <meta name="description" content="I-StartUp, Thank you for considering I-StartUp as your partner in success." />
     <meta name="keywords" content="startup, MVP, business mentorship, IT team, Tunisia, entrepreneurs">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.i-startup.tn/" />
-    <meta property="og:title" content="I-StartUp | Empowering Startups from Idea to Success" />
-    <meta property="og:description" content="Providing access to an IT team and expert mentorship to help startups build MVPs and succeed." />
+    <meta property="og:title" content="I-StartUp | From Idea to Success" />
+    <meta property="og:description" content="I-StartUp, Thank you for considering I-StartUp as your partner in success." />
     <meta property="og:image" content="Assets/meta.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://www.i-startup.tn/" />
-    <meta name="twitter:title" content="I-StartUp | Empowering Startups from Idea to Success" />
-    <meta name="twitter:description" content="I-StartUp helps startups with IT team support, MVP development, and business growth strategies." />
+    <meta name="twitter:title" content="I-StartUp | From Idea to Success" />
+    <meta name="twitter:description" content="I-StartUp, Thank you for considering I-StartUp as your partner in success." />
     <meta name="twitter:image" content="Assets/meta.png" />
     <title>Success Stories | I-StartUp</title>
 
@@ -90,7 +90,7 @@
             <div class="bg-gray-100 p-6 mb-12 rounded-lg shadow-md animate__animated animate__fadeInUp">
                 <div class="flex items-center justify-between mb-6">
                     <h3 class="text-2xl font-semibold text-indigo-600">LingoLand</h3>
-                    <img src="https://lingo-land.net/1.png" alt="lingologo" class="h-12 w-12 rounded-full">
+                    <img src="https://lingo-land.net/1.png" alt="lingo-logo" class="h-12 w-12 rounded-full">
                 </div>
                 <p class="text-lg text-gray-600 mb-4"><strong>Challenge:</strong> Lack of technical team.</p>
                 <p class="text-lg text-gray-600 mb-4"><strong>Solution:</strong> IT support and personal team.</p>
