"Updated VSCode settings, deleted accelerationapp.html, updated programs.html link, and modified accelerationform.js script URL and form handling logic."

--- a/programs.html
+++ b/programs.html
@@ -120,7 +120,7 @@
                     <center>
                         <img src="https://startuptn.in/images/racket-img.png" class="px-6 py-3" alt="">
                     </center>
-                    <a href="applications/accelerationapp.html" class="inline-block bg-green-600 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-green-700 transition duration-200">Join the Acceleration Program</a>
+                    <a href="accelerationapp.html" class="inline-block bg-green-600 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-green-700 transition duration-200">Join the Acceleration Program</a>
                 </div>
 
             </div>
