"Updated HTML files: changed label text, updated logo image, and modified links and button text in various pages."

--- a/application.html
+++ b/application.html
@@ -139,8 +139,8 @@
                 </figure>
             </div>
             <!-- CTA Button -->
-            <a href="404.html" class="mt-12 inline-block bg-indigo-600 text-white px-8 py-3 rounded-md text-lg font-semibold hover:bg-indigo-700 animate__animated animate__fadeInUp animate__delay-1s">
-                Apply Now
+            <a href="Incubationapp.html" class="mt-12 inline-block bg-indigo-600 text-white px-8 py-3 rounded-md text-lg font-semibold hover:bg-indigo-700 animate__animated animate__fadeInUp animate__delay-1s">
+                Join the wait-list
             </a>
         </div>
     </section>
@@ -149,7 +149,7 @@
         <div class="container mx-auto px-6">
             <!-- Logo on top in phone view -->
             <div class="flex justify-center mb-4 md:hidden">
-                <img src="Assets/logocon-full.png" alt="I-StartUp Logo" class="h-18 w-18">
+                <img src="Assets/logocon-full-empty.png" alt="I-StartUp Logo" class="h-18 w-18">
             </div>
 
             <div class="flex flex-wrap justify-between items-center">
