--- a/programs.html
+++ b/programs.html
@@ -97,8 +97,8 @@
                     <p class="text-lg text-gray-600 mb-6">From idea to prototype – we help startups build a functional MVP with a dedicated IT team.</p>
                     <ul class="list-disc text-left text-gray-600 space-y-3 mb-8 pl-6">
                         <li>MVP Development – Build a functional prototype.</li>
-                        <li>Busi)ness Guidance Experience (BGE) – Validate ideas and refine models.</li>
-                        <li>Technical Resources – Dedicated IT team to build your product.</li>
+                        <li>Business Guidance Experience (BGE) – Validate ideas and refine models.</li>
+                        <li>Technical Resources – Dedicated IT team.</li>
                         <li>Initial Funding Opportunities – Seed funding options.</li>
                     </ul>
                     <center>
@@ -131,7 +131,7 @@
         <div class="container mx-auto px-6">
             <!-- Logo on top in phone view -->
             <div class="flex justify-center mb-4 md:hidden">
-                <img src="Assets/logocon-full.png" alt="I-StartUp Logo" class="h-18 w-18">
+                <img src="Assets/logocon-full-empty.png" alt="I-StartUp Logo" class="h-18 w-18">
             </div>
     
             <div class="flex flex-wrap justify-between items-center">
