--- a/contact.html
+++ b/contact.html
@@ -170,7 +170,7 @@
         <div class="container mx-auto px-6">
             <!-- Logo on top in phone view -->
             <div class="flex justify-center mb-4 md:hidden">
-                <img src="Assets/logocon-full.png" alt="I-StartUp Logo" class="h-18 w-18">
+                <img src="Assets/logocon-full-empty.png" alt="I-StartUp Logo" class="h-18 w-18">
             </div>
     
             <div class="flex flex-wrap justify-between items-center">
