"Updated headings for Incubation and Acceleration Programs"

--- a/programs.html
+++ b/programs.html
@@ -93,7 +93,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
                 <!-- Incubation Program -->
                 <div class="p-8 bg-white rounded-lg shadow-lg">
-                    <h3 class="text-2xl font-semibold mb-6 text-gray-800">Incubation Program: IT Team + MVP Development</h3>
+                    <h3 class="text-2xl font-semibold mb-6 text-gray-800">Incubation Program</h3>
                     <p class="text-lg text-gray-600 mb-6">From idea to prototype – we help startups build a functional MVP with a dedicated IT team.</p>
                     <ul class="list-disc text-left text-gray-600 space-y-3 mb-8 pl-6">
                         <li>MVP Development – Build a functional prototype.</li>
@@ -109,7 +109,7 @@
 
                 <!-- Acceleration Program -->
                 <div class="p-8 bg-white rounded-lg shadow-lg animate__animated animate__fadeInUp">
-                    <h3 class="text-2xl font-semibold mb-6 text-gray-800">Acceleration Program: Scaling Your Business</h3>
+                    <h3 class="text-2xl font-semibold mb-6 text-gray-800">Acceleration Program</h3>
                     <p class="text-lg text-gray-600 mb-6">After MVP, we help startups scale with dedicated support, global market access, and investment preparation.</p>
                     <ul class="list-disc text-left text-gray-600 space-y-3 mb-8 pl-6">
                         <li>Growth Strategies – Scale with dedicated IT support.</li>
