"Updated email addresses in multiple HTML files, replacing Mohamed@i-startup.tn and Ali.Cheikh@i-startup.tn with info.client@i-startup.tn and contact@i-startup.tn."

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                 <!-- Emails -->
                 <center>
                     <div class="flex space-x-4 mb-4 md:mb-0">
-                        <a href="mailto:Mohamed@i-startup.tn" class="hover:text-white">Mohamed@i-startup.tn</a>
-                        <a href="mailto:Ali.Cheikh@i-startup.tn" class="hover:text-white">Ali.Cheikh@i-startup.tn</a>
+                        <a href="info.client@i-startup.tn" class="hover:text-white">info.client@i-startup.tn</a>
+                        <a href="contact@i-startup.tn" class="hover:text-white">contact@i-startup.tn</a>
                     </div>
                 </center>
 
