"Replace Twitter with Discord in social links across multiple HTML files"

--- a/programs.html
+++ b/programs.html
@@ -138,7 +138,7 @@
                 <!-- Social links -->
                 <div class="flex space-x-6 mb-4 md:mb-0 text-center px-14">
                     <a href="#" class="hover:text-white">LinkedIn</a>
-                    <a href="#" class="hover:text-white">Twitter</a>
+                    <a href="#" class="hover:text-white">Discord</a>
                     <a href="#" class="hover:text-white">Facebook</a>
                 </div>
     
