--- a/applications/jobform.html
+++ b/applications/jobform.html
@@ -168,7 +168,7 @@
                 <p>© 2024 I-StartUp. All rights reserved.</p>
                 <div class="flex space-x-4">
                     <a href="#" class="hover:text-white">LinkedIn</a>
-                    <a href="#" class="hover:text-white">Twitter</a>
+                    <a href="#" class="hover:text-white">Discord</a>
                     <a href="#" class="hover:text-white">Facebook</a>
                 </div>
             </div>
