"Replace Facebook link with Instagram link in social media sections across multiple HTML files"

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <div class="flex space-x-6 mb-4 md:mb-0 text-center px-14">
                     <a href="#" class="hover:text-white">LinkedIn</a>
                     <a href="#" class="hover:text-white">Discord</a>
-                    <a href="#" class="hover:text-white">Facebook</a>
+                    <a href="https://www.instagram.com/i_startup.tn/#" class="hover:text-white">Instagram</a>
                 </div>
 
                 <!-- Emails -->
