"Added Open Graph and Twitter meta tags to 404.html"

--- a/404.html
+++ b/404.html
@@ -4,6 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>404 Not Found</title>
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.i-startup.tn/" />
+  <meta property="og:title" content="404 Page | Not what you are looking for" />
+  <meta property="og:image" content="https://www.i-startup.tn/Assets/404.png" />
+
+  <!-- Twitter -->
+  <meta property="og:site_name" content="Are You Dumb ?!" />
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://www.i-startup.tn/" />
+  <meta name="twitter:title" content="404 Page | Not what you are looking for" />
+  <meta name="twitter:image" content="https://www.i-startup.tn/Assets/404.png" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
