"Update og:title meta property in index.html"

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.i-startup.tn/" />
-    <meta property="og:site_name" content="Make it Rock !" />
-    <meta property="og:title" content="I-StartUp | Empowering Startups from Idea to Success" />
+    <meta property="og:site_name" content="I-StartUp.tn" />
+    <meta property="og:title" content="Empowering Startups from Idea to Success" />
     <meta property="og:description" content="Providing access to an IT team and expert mentorship to help startups build MVPs and succeed." />
     <meta property="og:image" content="https://www.i-startup.tn/Assets/meta.png" />
 
