"Updated social media links in multiple HTML files to point to https://discord.gg/eETmT344 for LinkedIn and Discord, and kept Instagram link unchanged."

--- a/applications/jobform.html
+++ b/applications/jobform.html
@@ -167,9 +167,9 @@
             <div class="flex justify-between items-center">
                 <p>© 2024 I-StartUp. All rights reserved.</p>
                 <div class="flex space-x-4">
-                    <a href="#" class="hover:text-white">LinkedIn</a>
-                    <a href="#" class="hover:text-white">Discord</a>
-                    <a href="#" class="hover:text-white">Facebook</a>
+                    <a href="https://discord.gg/eETmT344" class="hover:text-white">LinkedIn</a>
+                    <a href="https://discord.gg/eETmT344" class="hover:text-white">Discord</a>
+                    <a href="https://discord.gg/eETmT344" class="hover:text-white">Facebook</a>
                 </div>
             </div>
         </div>
