--- a/accelerationapp.html
+++ b/accelerationapp.html
@@ -152,8 +152,8 @@
             <div class="flex flex-wrap justify-between items-center">
                 <!-- Social links -->
                 <div class="flex space-x-6 mb-4 md:mb-0 text-center px-14">
-                    <a href="#" class="hover:text-white">LinkedIn</a>
-                    <a href="#" class="hover:text-white">Discord</a>
+                    <a href="https://discord.gg/eETmT344" class="hover:text-white">LinkedIn</a>
+                    <a href="https://discord.gg/eETmT344" class="hover:text-white">Discord</a>
                     <a href="https://www.instagram.com/i_startup.tn/#" class="hover:text-white">Instagram</a>
                 </div>
 
